feat: 전체 페이지에 다크모드 적용

--- a/src/styles/calendar.css
+++ b/src/styles/calendar.css
@@ -38,6 +38,21 @@
 
 /*****/
 
+.react-calendar__tile {
+  color: #000;
+}
+.dark-theme .react-calendar__tile {
+  color: #fff;
+}
+
+.react-calendar__month-view__days__day--weekend {
+  color: #eb4d3d;
+}
+
+.dark-theme .react-calendar__month-view__days__day--weekend {
+  color: #eb4d3d;
+}
+
 .react-calendar__tile:enabled:hover,
 .react-calendar__tile:enabled:focus {
   background: #f2f9fe;
