--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -29,6 +29,10 @@ body,
   height: 100%;
 }
 
+html.dark-theme {
+  background-color: #1e1f21;
+}
+
 #__next {
   position: relative;
   z-index: 0;
