feat: 캘린더 min detail month로 변경

--- a/src/styles/calendar.css
+++ b/src/styles/calendar.css
@@ -176,8 +176,7 @@
   visibility: hidden;
 }
 .react-calendar__navigation button[disabled] {
-  visibility: hidden;
-  cursor: default;
+  background: transparent;
 }
 abbr[title] {
   text-decoration: none;
