--- a/src/styles/toast.css
+++ b/src/styles/toast.css
@@ -1,9 +1,17 @@
 .Toastify__toast-container {
-  font-size: 16px;
 }
 .Toastify__toast {
   user-select: none;
   border-radius: 10px;
+}
+
+@media only screen and (max-width: 480px) {
+  .Toastify__toast-container {
+    width: 100vw;
+    padding: 10px;
+    left: 0;
+    margin: 0;
+  }
 }
 
 .dark-theme .Toastify__toast {
